# socket

./: .gitignore  Cargo.toml  README.md  aggressive_list.sh  client_call.sh  lint.sh  lint_with_clippy.sh  multiple_client_calls.sh  sample_socket_logo.txt
.github/ISSUE_TEMPLATE/: enchancement-request.md
.github/workflows/: clippy.yml
examples/: client.rs
src/: lib.rs  main.rs
